--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -2,10 +2,11 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8" <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8"
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>placeholder title</title>
-    <meta name="description" content="A common layout example on the web called the 'holy grail' layout." <meta
-        name="author" content="Tyler Matthew Peterson">
+    <meta name="description" content="A common layout example on the web called the 'holy grail' layout."
+    <meta name="author" content="Tyler Matthew Peterson">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     <nav>
         <u1>
             <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Cool Thing</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/?lang=eng">Church Website></a></li>
+            <li><a href="https://www.churchofjesuschrist.org/?lang=eng">Church Website</a></li>
         </u1>
     </nav>
     <main>
