--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8"
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>placeholder title</title>
     <meta name="description" content="A common layout example on the web called the 'holy grail' layout."
@@ -14,10 +14,10 @@
         <h1>A Holy Grail Layout Example</h1>
     </header>
     <nav>
-        <u1>
+        <ul>
             <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Cool Thing</a></li>
             <li><a href="https://www.churchofjesuschrist.org/?lang=eng">Church Website</a></li>
-        </u1>
+        </ul>
     </nav>
     <main>
         <section>
