added missing > after meta author property or whatever

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Tyler Matthew Peterson | WDD 130</title>
-    <meta name="description" content="My name is Tyler Peterson. I am developing this web page for WDD130 as part of learning to use HTML and CSS!"
+    <meta name="description" content="My name is Tyler Peterson. I am developing this web page for WDD130 as part of learning to use HTML and CSS!">
     <meta name="author" content="Tyler Matthew Peterson">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
