overlay.html and overlay.css activity from week 3 regarding the position property and its possible values

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Tyler Matthew Peterson | WDD 130</title>
-    <meta name="description" content="My name is Tyler Peterson. I am developing this web page for WDD130 as part of learning to use HTML and CSS!">
+    <meta name="description"
+        content="My name is Tyler Peterson. I am developing this web page for WDD130 as part of learning to use HTML and CSS!">
     <meta name="author" content="Tyler Matthew Peterson">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -26,7 +27,9 @@
     <aside>
         <h2>Iowa</h2>
         <img src="images/iowa-state-outline.webp" alt="iowa borders">
-        <p>I was born and raised in Iowa, which is in the central United States. It is known as the Hawkeye State, and is often associated with corn! The state borders Nebraska, Missouri, Illinois, Minnesota, Wisconsin, and South Dakota.</p>
+        <p>I was born and raised in Iowa, which is in the central United States. It is known as the Hawkeye State, and
+            is often associated with corn! The state borders Nebraska, Missouri, Illinois, Minnesota, Wisconsin, and
+            South Dakota.</p>
     </aside>
     <footer>
         <p>©2025 ❖ Tyler Matthew Peterson ❖ Iowa, United States</p>
