classes added, additional CSS rules and declarations edited, etc.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="">My LinkedIn Page</a>
+            <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
     <main>
@@ -23,8 +25,16 @@
         <img src="images/profile.webp" alt="Hello, my name is Tyler Matthew Peterson" width="200">
         <p>Hello! My name is Tyler Peterson and I am from Iowa. I enjoy spending time with my family--my wife and 2
             kids--and listening to music.</p>
+        <ul class="box bumpdown">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/winter-quarters-nebraska-temple?lang=eng"
+                    target="_blank">Winter Quarters Nebraska Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/chicago-illinois-temple?lang=eng"
+                    target="_blank">Chicago Illinois Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng"
+                    target="_blank">Nauvo Illinois Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Iowa</h2>
         <img src="images/iowa-state-outline.webp" alt="iowa borders">
         <p>I was born and raised in Iowa, which is in the central United States. It is known as the Hawkeye State, and
@@ -35,5 +45,6 @@
         <p>©2025 ❖ Tyler Matthew Peterson ❖ Iowa, United States</p>
     </footer>
 </body>
+<!-- Last modified: March 20, 2025 -->
 
 </html>
