--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" width="device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>About Us - Rapids Whitewater Rafting</title>
     <meta name="description" content="Whitewater Rafting Site - About Us page">
     <meta name="author" content="Tyler Matthew Peterson">
     <link rel="stylesheet" href="styles/rafting.css">
