--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,24 +28,26 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/hero.webp" alt="Hero image">
-            <h1>Rapids Whitewater Rafting</h1>
-            <article>
-                <img src="images/CLIENT.png" alt="Happy client">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam obcaecati dolore tempore delectus totam excepturi pariatur? Unde, nihil. Necessitatibus, consectetur!</p>
+            <img src="images/hero.webp" alt="Hero image" class="image1">
+            <h1 class="heading1">Rapids Whitewater Rafting</h1>
+            <article class="article1">
+                <img class="image1" src="images/happy_employee.webp" alt="Happy employee" width="200">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam obcaecati dolore tempore delectus
+                    totam excepturi pariatur? Unde, nihil. Necessitatibus, consectetur!</p>
             </article>
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus facere sint illo eveniet cupiditate porro. At placeat dolores voluptatem perferendis delectus inventore!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus facere sint illo eveniet cupiditate porro.
+                At placeat dolores voluptatem perferendis delectus inventore!</p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="wwr1.png" alt="Rafting image 1">
-            <img src="wwr2.png" alt="Rafting image 2">
-            <img src="wwr3.png" alt="Rafting image 3">
-            <img src="wwr4.png" alt="Rafting image 4">
-            <img src="wwr5.png" alt="Rafting image 5">
+            <img src="images/rafting_image_1.webp" alt="Rafting image 1">
+            <img src="images/rafting_image_2.webp" alt="Rafting image 2">
+            <img src="images/rafting_image_3.jpg" alt="Rafting image 3">
+            <img src="images/rafting_image_4.webp" alt="Rafting image 4">
+            <img src="images/rafting_image_5.webp" alt="Rafting image 5">
         </section>
     </main>
     <footer>
