opacity for section1 class element to look gooder; committing so I can run the page evaluation tool

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,7 +32,7 @@
             <h1 class="heading1">Rapids Whitewater Rafting</h1>
             <article class="article1">
                 <img class="image1" src="images/happy_employee.webp" alt="Happy employee" width="200">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam obcaecati dolore tempore delectus
+                <p class="para1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam obcaecati dolore tempore delectus
                     totam excepturi pariatur? Unde, nihil. Necessitatibus, consectetur!</p>
             </article>
         </div>
