last commit before submitting week 3 assignment

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,7 +38,7 @@
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus facere sint illo eveniet cupiditate porro.
+            <p class="history-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus facere sint illo eveniet cupiditate porro.
                 At placeat dolores voluptatem perferendis delectus inventore!</p>
         </section>
         <section>
