completed "W04 Optional Practice: Home Page Layout Enhancements (i think) -- committing in order to run the page evaluation tool

--- a/index.html
+++ b/index.html
@@ -16,31 +16,33 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
-            <a href="">My LinkedIn Page</a>
+            <a href="https://www.linkedin.com/in/tyler-pete/">My LinkedIn Page</a>
             <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>Tyler Matthew Peterson | WDD 130</h1>
-        <img src="images/profile.webp" alt="Hello, my name is Tyler Matthew Peterson" width="200">
-        <p>Hello! My name is Tyler Peterson and I am from Iowa. I enjoy spending time with my family--my wife and 2
+    <div class="grid">
+        <main>
+            <h1>Tyler Matthew Peterson | WDD 130</h1>
+            <img src="images/profile.webp" alt="Hello, my name is Tyler Matthew Peterson" width="200">
+            <p>Hello! My name is Tyler Peterson and I am from Iowa. I enjoy spending time with my family--my wife and 2
             kids--and listening to music.</p>
-        <ul class="box bumpdown">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/winter-quarters-nebraska-temple?lang=eng"
+            <ul class="box bumpdown">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/winter-quarters-nebraska-temple?lang=eng"
                     target="_blank">Winter Quarters Nebraska Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/chicago-illinois-temple?lang=eng"
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/chicago-illinois-temple?lang=eng"
                     target="_blank">Chicago Illinois Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng"
-                    target="_blank">Nauvo Illinois Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Iowa</h2>
-        <img src="images/iowa-state-outline.webp" alt="iowa borders">
-        <p>I was born and raised in Iowa, which is in the central United States. It is known as the Hawkeye State, and
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng"
+                    target="_blank">Nauvoo Illinois Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Iowa</h2>
+            <img src="images/iowa-state-outline.webp" alt="iowa borders">
+            <p>I was born and raised in Iowa, which is in the central United States. It is known as the Hawkeye State, and
             is often associated with corn! The state borders Nebraska, Missouri, Illinois, Minnesota, Wisconsin, and
             South Dakota.</p>
-    </aside>
+        </aside>
+    </div>
     <footer>
         <p>©2025 ❖ Tyler Matthew Peterson ❖ Iowa, United States</p>
     </footer>
