Preliminary completion of Week 4 Update About Us page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -17,13 +17,13 @@
 </head>
 
 <body>
-    <header>
-        <img src="images/logo.jpeg" alt="WWR Logo">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+    <header class="top">
+        <img class="logo" src="images/logo.jpeg" alt="WWR Logo">
+        <nav class="menu">
+            <button><a class="menu-button" href="index.html">Home</a></button>
+            <button><a class="menu-button" href="about.html">About Us</a></button>
+            <button><a class="menu-button" href="trips.html">Trips</a></button>
+            <button><a class="menu-button" href="contact.html">Contact Us</a></button>
         </nav>
     </header>
     <main>
@@ -32,35 +32,62 @@
             <h1 class="heading1">Rapids Whitewater Rafting</h1>
             <article class="article1">
                 <img class="image1" src="images/happy_employee.webp" alt="Happy employee" width="200">
-                <p class="para1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam obcaecati dolore tempore delectus
+                <p class="para1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam obcaecati dolore
+                    tempore delectus
                     totam excepturi pariatur? Unde, nihil. Necessitatibus, consectetur!</p>
             </article>
         </div>
-        <section>
-            <h2>History</h2>
-            <p class="history-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus facere sint illo eveniet cupiditate porro.
-                At placeat dolores voluptatem perferendis delectus inventore!</p>
+        <section class="blank-section">
+            <p> </p>
         </section>
-        <section>
-            <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting_image_1.webp" alt="Rafting image 1">
-            <img src="images/rafting_image_2.webp" alt="Rafting image 2">
-            <img src="images/rafting_image_3.jpg" alt="Rafting image 3">
-            <img src="images/rafting_image_4.webp" alt="Rafting image 4">
-            <img src="images/rafting_image_5.webp" alt="Rafting image 5">
+        <section class="history-section">
+            <h2 class="history-heading">History</h2>
+            <section class="history-grid">
+                <p class="history">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat aperiam cupiditate
+                    modi, harum non fuga iusto praesentium numquam officia quae, ex accusantium veritatis.</p>
+                <img class="history" src="images/history_image.webp" alt="Historical image" width="200">
+                <p class="history">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus consectetur
+                    laudantium veritatis omnis alias inventore exercitationem, obcaecati esse, optio similique
+                    repudiandae eius veniam?</p>
+            </section>
+        </section>
+        <section class="adventure-section">
+            <h2 class="adventure-heading">Adventure Awaits You!</h2>
+            <div class="adventure-div">
+                <figure class="adventure-figure">
+                    <img src="images/rafting_image_1.webp" alt="Rafting image 1" width="100%">
+                    <figcaption class="caption">Half Day Adventure</figcaption>
+                </figure>
+                <figure class="adventure-figure">
+                    <img src="images/rafting_image_2.webp" alt="Rafting image 2" width="100%">
+                    <figcaption class="caption">Big Mallard</figcaption>
+                </figure>
+                <figure class="adventure-figure">
+                    <img src="images/rafting_image_3.jpg" alt="Rafting image 3" width="100%">
+                    <figcaption class="caption">The Big Drop</figcaption>
+                </figure>
+                <figure class="adventure-figure">
+                    <img src="images/rafting_image_4.webp" alt="Rafting image 4" width="100%">
+                    <figcaption class="caption">Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure class="adventure-figure">
+                    <img src="images/rafting_image_5.webp" alt="Rafting image 5" width="100%">
+                    <figcaption class="caption">Little Splash</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
         <p>©2025 Rapids Whitewater Rafting | Tyler Matthew Peterson</p>
         <nav class="sociallinks">
-            <a href="https://facebook.com">
-                <img src="images/facebook.svg" alt="Facebook">
+            <a class="logo2" href="https://facebook.com">
+                <img src="images/facebook.svg" alt="Facebook" width="100%">
             </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.svg" alt="Instagram">
+            <a class="logo2" href="https://instagram.com">
+                <img src="images/instagram.svg" alt="Instagram" width="100%">
             </a>
-            <a href="https://tiktok.com">
-                <img src="images/tiktok.svg" alt="Tiktok">
+            <a class="logo2" href="https://tiktok.com">
+                <img src="images/tiktok.svg" alt="Tiktok" width="100%">
             </a>
         </nav>
     </footer>
