committing in order for teacher to be able to view and troubleshoot the html/css with me

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -37,41 +37,41 @@
                     totam excepturi pariatur? Unde, nihil. Necessitatibus, consectetur!</p>
             </article>
         </div>
-        <section class="blank-section">
+        <div class="blank-section">
             <p> </p>
-        </section>
+        </div>
         <section class="history-section">
             <h2 class="history-heading">History</h2>
-            <section class="history-grid">
+            <div class="history-grid">
                 <p class="history">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat aperiam cupiditate
                     modi, harum non fuga iusto praesentium numquam officia quae, ex accusantium veritatis.</p>
                 <img class="history" src="images/history_image.webp" alt="Historical image" width="200">
                 <p class="history">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus consectetur
                     laudantium veritatis omnis alias inventore exercitationem, obcaecati esse, optio similique
                     repudiandae eius veniam?</p>
-            </section>
+            </div>
         </section>
         <section class="adventure-section">
             <h2 class="adventure-heading">Adventure Awaits You!</h2>
             <div class="adventure-div">
                 <figure class="adventure-figure">
-                    <img src="images/rafting_image_1.webp" alt="Rafting image 1" width="100%">
+                    <img src="images/rafting_image_1.webp" alt="Rafting image 1" width="140">
                     <figcaption class="caption">Half Day Adventure</figcaption>
                 </figure>
                 <figure class="adventure-figure">
-                    <img src="images/rafting_image_2.webp" alt="Rafting image 2" width="100%">
+                    <img src="images/rafting_image_2.webp" alt="Rafting image 2" width="140">
                     <figcaption class="caption">Big Mallard</figcaption>
                 </figure>
                 <figure class="adventure-figure">
-                    <img src="images/rafting_image_3.jpg" alt="Rafting image 3" width="100%">
+                    <img src="images/rafting_image_3.jpg" alt="Rafting image 3" width="140">
                     <figcaption class="caption">The Big Drop</figcaption>
                 </figure>
                 <figure class="adventure-figure">
-                    <img src="images/rafting_image_4.webp" alt="Rafting image 4" width="100%">
+                    <img src="images/rafting_image_4.webp" alt="Rafting image 4" width="140">
                     <figcaption class="caption">Los Dientes del Diablo</figcaption>
                 </figure>
                 <figure class="adventure-figure">
-                    <img src="images/rafting_image_5.webp" alt="Rafting image 5" width="100%">
+                    <img src="images/rafting_image_5.webp" alt="Rafting image 5" width="140">
                     <figcaption class="caption">Little Splash</figcaption>
                 </figure>
             </div>
