committing to use page evaluation tool

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -20,22 +20,23 @@
     <header class="top">
         <img class="logo" src="images/logo.jpeg" alt="WWR Logo">
         <nav class="menu">
-            <button><a class="menu-button" href="index.html">Home</a></button>
-            <button><a class="menu-button" href="about.html">About Us</a></button>
-            <button><a class="menu-button" href="trips.html">Trips</a></button>
-            <button><a class="menu-button" href="contact.html">Contact Us</a></button>
+            <a class="menu-button" href="index.html">Home</a>
+            <a class="menu-button" href="about.html">About Us</a>
+            <a class="menu-button" href="trips.html">Trips</a>
+            <a class="menu-button" href="contact.html">Contact Us</a>
         </nav>
     </header>
     <main>
         <div class="hero">
             <img src="images/hero.webp" alt="Hero image" class="image1">
             <h1 class="heading1">Rapids Whitewater Rafting</h1>
-            <article class="article1">
+            <div class="article1">
+                <h3> </h3>
                 <img class="image1" src="images/happy_employee.webp" alt="Happy employee" width="200">
                 <p class="para1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam obcaecati dolore
                     tempore delectus
                     totam excepturi pariatur? Unde, nihil. Necessitatibus, consectetur!</p>
-            </article>
+                </div>
         </div>
         <div class="blank-section">
             <p> </p>
@@ -81,13 +82,13 @@
         <p>©2025 Rapids Whitewater Rafting | Tyler Matthew Peterson</p>
         <nav class="sociallinks">
             <a class="logo2" href="https://facebook.com">
-                <img src="images/facebook.svg" alt="Facebook" width="100%">
+                <img src="images/facebook.svg" alt="Facebook" width="25">
             </a>
             <a class="logo2" href="https://instagram.com">
-                <img src="images/instagram.svg" alt="Instagram" width="100%">
+                <img src="images/instagram.svg" alt="Instagram" width="28">
             </a>
             <a class="logo2" href="https://tiktok.com">
-                <img src="images/tiktok.svg" alt="Tiktok" width="100%">
+                <img src="images/tiktok.svg" alt="Tiktok" width="28">
             </a>
         </nav>
     </footer>
