committing the final page for Week 4 assignment (I hope)

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,13 +30,12 @@
         <div class="hero">
             <img src="images/hero.webp" alt="Hero image" class="image1">
             <h1 class="heading1">Rapids Whitewater Rafting</h1>
-            <div class="article1">
-                <h3> </h3>
+            <article class="article1">
                 <img class="image1" src="images/happy_employee.webp" alt="Happy employee" width="200">
                 <p class="para1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam obcaecati dolore
                     tempore delectus
                     totam excepturi pariatur? Unde, nihil. Necessitatibus, consectetur!</p>
-            </div>
+            </article>
         </div>
         <div class="blank-section">
             <p> </p>
