--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -8,7 +8,13 @@
     <meta name="author" content="Tyler Matthew Peterson">
     <title>WDD 130 | HTML Form - User Poll</title>
 
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/poll-form.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
@@ -20,11 +26,14 @@
             <fieldset>
                 <legend>Contact Information</legend>
 
-                <label for="fullname">Full Name:</label>
-                <input type="text" id="fullname" name="fullname"><br>
-                <label for="useremail">Email:</label>
-                <input type="email" id="useremail" name="useremail">
-
+                <div class="form-item column2">
+                    <label for="fullname">Full Name:</label>
+                    <input type="text" id="fullname" name="fullname"><br>
+                </div>
+                <div class="form-item column2">
+                    <label for="useremail">Email:</label>
+                    <input type="email" id="useremail" name="useremail">
+                </div>
                 <!-- Another method of labeling: "implicit label method:" -->
                 <!--   <label>Email: <input type="email" name="useremail" -->
                 <!--This fits on one line and eliminates need for 'for' and id attributes! -->
@@ -32,14 +41,19 @@
             <fieldset>
                 <legend>Questions</legend>
 
-                <label for="browser">What is your favorite browser?</label>
-                <select id="browser" name="browser">
-                    <option value="chrome">Chrome</option>
-                    <option value="firefox">Firefox</option>
-                    <option value="edge">Edge</option>
-                </select><br>
-                <label for="pet">Do you have a household pet?</label>
-                <input type="checkbox" id="pet" name="pet"><br>
+                <div class="form-item column1">
+                    <label for="browser">What is your favorite browser?</label>
+                    <select id="browser" name="browser">
+                        <option value="chrome">Chrome</option>
+                        <option value="firefox">Firefox</option>
+                        <option value="edge">Edge</option>
+                    </select>
+                </div>
+                <div class="form-item column1">
+                    <label for="pet">Do you have a household pet?</label>
+                    <input type="checkbox" id="pet" name="pet"><br>
+                </div>
+
                 <label for="feedback">List the places you have lived.</label>
                 <input type="textarea" id="feedback" name="feedback" rows="4"
                     placeholder="Des Moines Iowa, Provo Utah, Boone Iowa">
