--- a/quiz.html
+++ b/quiz.html
@@ -22,7 +22,7 @@
                 <label for="q1">1. What does the acronym CSS stand for?</label>
                 <input type="text" id="q1" name="q1">
                 <label for="q1">2. How are id and class attributes selected in CSS?</label>
-                <input type="textarea" rows="5" id="q2" name="q2">
+                <textarea rows="5" id="q2" name="q2"></textarea>
                 <label for="q3">3. Which of the following is a valid CSS comment?</label>
                 <select id="q3" name="q3">
                     <option value="" selected disabled>Choose One ...</option>
