--- a/quiz.html
+++ b/quiz.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD130 | Quiz Form</title>
     <meta name="description"
         content="Practice activity to apply concepts from the learning activities on HTML form structure and style.">
-
+    <meta name="author" content="Tyler Matthew Peterson">
     <link rel="stylesheet" href="styles/quiz.css">
 </head>
 
@@ -21,7 +22,7 @@
 
                 <label for="q1">1. What does the acronym CSS stand for?</label>
                 <input type="text" id="q1" name="q1">
-                <label for="q1">2. How are id and class attributes selected in CSS?</label>
+                <label for="q2">2. How are id and class attributes selected in CSS?</label>
                 <textarea rows="5" id="q2" name="q2"></textarea>
                 <label for="q3">3. Which of the following is a valid CSS comment?</label>
                 <select id="q3" name="q3">
