incorrect attribute corrections

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -77,8 +77,7 @@
                 <input class="choice" type="radio" id="website_suggestion" name="message_purpose">
                 <label class="choice" for="website_suggestion">Website Suggestion</label>
 
-                <textarea rows="7" columns="100" id="message" name="message"
-                    placeholder="Type your message here..."></textarea>
+                <textarea rows="7" id="message" name="message" placeholder="Type your message here..."></textarea>
                 <input class="choice" checked type="checkbox" id="newsletter" name="newsletter">
                 <label class="choice" for="newsletter">Please subscribe me to the monthly newsletter</label>
 
