--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -77,11 +77,11 @@
                 <input class="choice" type="radio" id="website_suggestion" name="message_purpose">
                 <label class="choice" for="website_suggestion">Website Suggestion</label>
 
-                <textarea rows="7" id="message" name="message" placeholder="Type your message here..."></textarea>
+                <textarea rows="7" id="message" name="message" placeholder="Type your message here..."></textarea><br>
                 <input class="choice" checked type="checkbox" id="newsletter" name="newsletter">
-                <label class="choice" for="newsletter">Please subscribe me to the monthly newsletter</label>
+                <label class="choice" for="newsletter">Please subscribe me to the monthly newsletter</label><br>
 
-                <button type="submit">Submit Message</button>
+                <button class="submit-button"type="submit">Submit Message</button>
             </fieldset>
         </form>
 
