woops needed a <br>

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -68,7 +68,7 @@
                 <label for="name">Your name:</label>
                 <input type="text" id="name" name="name">
                 <label for="useremail">Email address:</label>
-                <input type="text" id="useremail" name="useremail">
+                <input type="text" id="useremail" name="useremail"><br>
 
                 <input class="choice" type="radio" id="general_inquiry" name="message_purpose">
                 <label class="choice" for="general_inquiry">General Inquiry</label>
@@ -81,7 +81,7 @@
                 <input class="choice" checked type="checkbox" id="newsletter" name="newsletter">
                 <label class="choice" for="newsletter">Please subscribe me to the monthly newsletter</label><br>
 
-                <button class="submit-button"type="submit">Submit Message</button>
+                <button class="submit-button" type="submit">Submit Message</button>
             </fieldset>
         </form>
 
