first commit to desperately get what I have so far submitted

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -27,8 +27,8 @@
         </nav>
     </header>
     <main>
-        <div class="contact-header">
-            <h1 class="contact-heading1">Contact Us</h1>
+        <div class="contactrips-header">
+            <h1 class="contactrips-heading1">Contact Us</h1>
         </div>
         <div class="staff-grid">
             <h2 class="hear-from-you-heading">We want to hear from you!</h2>
