--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/">Rafting Website</a>
+            <a href="https://tylerpete.github.io/wdd130/wwr/index.html">Rafting Website</a>
             <a href="https://www.linkedin.com/in/tyler-pete/">My LinkedIn Page</a>
             <a href="https://facebook.com">Facebook</a>
         </nav>
@@ -25,22 +25,23 @@
             <h1>Tyler Matthew Peterson | WDD 130</h1>
             <img src="images/profile.webp" alt="Hello, my name is Tyler Matthew Peterson" width="200">
             <p>Hello! My name is Tyler Peterson and I am from Iowa. I enjoy spending time with my family--my wife and 2
-            kids--and listening to music.</p>
+                kids--and listening to music.</p>
             <ul class="box bumpdown">
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/winter-quarters-nebraska-temple?lang=eng"
-                    target="_blank">Winter Quarters Nebraska Temple</a></li>
+                        target="_blank">Winter Quarters Nebraska Temple</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/chicago-illinois-temple?lang=eng"
-                    target="_blank">Chicago Illinois Temple</a></li>
+                        target="_blank">Chicago Illinois Temple</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng"
-                    target="_blank">Nauvoo Illinois Temple</a></li>
+                        target="_blank">Nauvoo Illinois Temple</a></li>
             </ul>
         </main>
         <aside class="box">
             <h2>Iowa</h2>
             <img src="images/iowa-state-outline.webp" alt="iowa borders">
-            <p>I was born and raised in Iowa, which is in the central United States. It is known as the Hawkeye State, and
-            is often associated with corn! The state borders Nebraska, Missouri, Illinois, Minnesota, Wisconsin, and
-            South Dakota.</p>
+            <p>I was born and raised in Iowa, which is in the central United States. It is known as the Hawkeye State,
+                and
+                is often associated with corn! The state borders Nebraska, Missouri, Illinois, Minnesota, Wisconsin, and
+                South Dakota.</p>
         </aside>
     </div>
     <footer>
