committing bare bones home page so grader can use navigation links to access other pages

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,1 +1,50 @@
-<!-- code -->
+<!DOCTYPE html>
+
+<html lang="en-US">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Home - Rapids Whitewater Rafting</title>
+    <meta name="description" content="Whitewater Rafting Site - Home page">
+    <meta name="author" content="Tyler Matthew Peterson">
+    <link rel="stylesheet" href="styles/rafting.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=STIX+Two+Text:ital@0;1&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
+    <header class="top">
+        <img class="logo" src="images/logo.jpeg" alt="WWR Logo">
+        <nav class="menu">
+            <a class="menu-button" href="index.html">Home</a>
+            <a class="menu-button" href="about.html">About Us</a>
+            <a class="menu-button" href="trips.html">Trips</a>
+            <a class="menu-button" href="contact.html">Contact Us</a>
+        </nav>
+    </header>
+    <main>
+        <p>in progress</p>
+    </main>
+    <footer>
+        <p>©2025 Rapids Whitewater Rafting | Tyler Matthew Peterson</p>
+        <nav class="sociallinks">
+            <a class="logo2" href="https://facebook.com">
+                <img src="images/facebook.svg" alt="Facebook" width="25">
+            </a>
+            <a class="logo2" href="https://instagram.com">
+                <img src="images/instagram.svg" alt="Instagram" width="28">
+            </a>
+            <a class="logo2" href="https://tiktok.com">
+                <img src="images/tiktok.svg" alt="Tiktok" width="28">
+            </a>
+        </nav>
+        <a href="REPLACE LINK HERE">Click here for the Home
+            page wireframe</a>
+    </footer>
+</body>
+
+</html>
