committing for correction of issue where article elements aren't allowed to be children of figure elements

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -36,28 +36,28 @@
                 <figure class="trip-figure">
                     <img src="images/rafting_image_3.jpg" alt="The Big Drop image" width="180">
                     <figcaption>The Big Drop</figcaption>
-                    <article class="trip-caption">Get some air with this trip! <br>Featuring several multi-foot
+                    <p class="trip-caption">Get some air with this trip! <br>Featuring several multi-foot
                         <br>drops, The
                         Big Drop will <br>shock your senses!
-                    </article>
+                    </p>
                 </figure>
                 <figure class="trip-figure">
                     <img src="images/rafting_image_1.webp" alt="Half Day Adventure image" width="180">
                     <figcaption>Half Day Adventure</figcaption>
-                    <article class="trip-caption">A longer excursion meant <br>to help rafters enjoy a long<br>stretch
-                        of scenery and a <br>varied landscape.</article>
+                    <p class="trip-caption">A longer excursion meant <br>to help rafters enjoy a long<br>stretch
+                        of scenery and a <br>varied landscape.</p>
                 </figure>
                 <figure class="trip-figure">
                     <img src="images/rafting_image_4.webp" alt="Los Dientes del Diablo image" width="180">
                     <figcaption>Los Dientes del Diablo</figcaption>
-                    <article class="trip-caption">An intense, more advanced<br> route! Experience powerful<br> bursts of
-                        rapids in quick<br> succession!</article>
+                    <p class="trip-caption">An intense, more advanced<br> route! Experience powerful<br> bursts of
+                        rapids in quick<br> succession!</p>
                 </figure>
                 <figure class="schedule-now-figure">
                     <a href="contact.html">
                         <img src="images/calendar.jpg" alt="Schedule now image" width="180" height="130">
                     </a>
-                    <article class="schedule-caption">Schedule now!</article>
+                    <p class="schedule-caption">Schedule now!</p>
                 </figure>
             </div>
         </section>
