THIRD time committing to try to fix incorrect children errors

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -33,32 +33,32 @@
         <section>
             <h2 class="popular-trips-heading">Popular upcoming trips</h2>
             <div class="popular-trips-grid">
-                <figure class="trip-figure">
+                <div class="trip-figure">
                     <img src="images/rafting_image_3.jpg" alt="The Big Drop image" width="180">
-                    <figcaption>The Big Drop</figcaption>
+                    <h3>The Big Drop</h3>
                     <p class="trip-caption">Get some air with this trip! <br>Featuring several multi-foot
                         <br>drops, The
                         Big Drop will <br>shock your senses!
                     </p>
-                </figure>
-                <figure class="trip-figure">
+                </div>
+                <div class="trip-figure">
                     <img src="images/rafting_image_1.webp" alt="Half Day Adventure image" width="180">
-                    <figcaption>Half Day Adventure</figcaption>
+                    <h3>Half Day Adventure</h3>
                     <p class="trip-caption">A longer excursion meant <br>to help rafters enjoy a long<br>stretch
                         of scenery and a <br>varied landscape.</p>
-                </figure>
-                <figure class="trip-figure">
+                </div>
+                <div class="trip-figure">
                     <img src="images/rafting_image_4.webp" alt="Los Dientes del Diablo image" width="180">
-                    <figcaption>Los Dientes del Diablo</figcaption>
+                    <h3>Los Dientes del Diablo</h3>
                     <p class="trip-caption">An intense, more advanced<br> route! Experience powerful<br> bursts of
                         rapids in quick<br> succession!</p>
-                </figure>
-                <figure class="schedule-now-figure">
+                </div>
+                <div class="schedule-now-figure">
                     <a href="contact.html">
                         <img src="images/calendar.jpg" alt="Schedule now image" width="180" height="130">
                     </a>
-                    <p class="schedule-caption">Schedule now!</p>
-                </figure>
+                    <a class="schedule-caption" href="contact.html">Schedule now!</a>
+                </div>
             </div>
         </section>
         <section>
