--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -57,7 +57,7 @@
                     <a href="contact.html">
                         <img src="images/calendar.jpg" alt="Schedule now image" width="180" height="130">
                     </a>
-                    <a class="schedule-caption" href="contact.html">Call to schedule now!</a>
+                    <a class="schedule-caption" href="contact.html">Click to call and schedule now!</a>
                 </div>
             </div>
         </section>
