--- a/wwr/index.html
+++ b/wwr/index.html
@@ -27,7 +27,11 @@
         </nav>
     </header>
     <main>
-        <p>in progress</p>
+        <div class="hero">
+            <img src="images/hero-for-home-page.webp" alt="Hero image" class="image1">
+            <h1 class="heading1">Go on an adventure!</h1>
+            <a class="view-trips-button" href="trips.html">View Trips</a>
+        </div>
     </main>
     <footer>
         <p>©2025 Rapids Whitewater Rafting | Tyler Matthew Peterson</p>
