--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,7 +29,7 @@
     <main>
         <div class="hero">
             <img src="images/hero-for-home-page.webp" alt="Hero image" class="image1">
-            <h1 class="heading1">Go on an adventure!</h1>
+            <h1 class="home-heading1">Go on an adventure!</h1>
             <a class="view-trips-button" href="trips.html">View Trips</a>
         </div>
     </main>
