to add offerings section to home page as of 11:42 AM

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -32,6 +32,18 @@
             <h1 class="home-heading1">Go on an adventure!</h1>
             <a class="view-trips-button" href="trips.html">View Trips</a>
         </div>
+        <section class="offerings-section">
+            <div class="offerings-div">
+                <figure class="offerings-figure">
+                    <img src="images/rafting_image_3.jpg" alt="Rafting image 1" width="140">
+                    <figcaption class="offerings-caption">Rafting</figcaption>
+                </figure>
+                <figure class="offerings-figure">
+                    <img src="images/rafting_image_5.webp" alt="Rafting image 2" width="140">
+                    <figcaption class="offerings-caption">Camping</figcaption>
+                </figure>
+            </div>
+        </section>
     </main>
     <footer>
         <p>©2025 Rapids Whitewater Rafting | Tyler Matthew Peterson</p>
