additional additions including the addition of the newsletter signup area on the home page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -35,15 +35,30 @@
         <section class="offerings-section">
             <div class="offerings-div">
                 <figure class="offerings-figure">
-                    <img src="images/rafting_image_3.jpg" alt="Rafting image 1" width="140">
+                    <img src="images/rafting_image_3.jpg" alt="Rafting image" width="140">
                     <figcaption class="offerings-caption">Rafting</figcaption>
                 </figure>
                 <figure class="offerings-figure">
-                    <img src="images/rafting_image_5.webp" alt="Rafting image 2" width="140">
+                    <img src="images/rafting_image_5.webp" alt="Camping image" width="140">
                     <figcaption class="offerings-caption">Camping</figcaption>
                 </figure>
             </div>
         </section>
+        <div class="newsletter-container">
+            <figure class="oars-figure">
+                <img src="images/newsletter-backdrop-image.jpg" alt="Oars image">
+            </figure>
+            <form class="newsletter-form">
+                <fieldset>
+                    <legend class="newsletter-legend">Newsletter</legend>
+                    <label class="newsletter-entry" for="namebox">Name:</label><br>
+                    <input class="newsletter-entry" type="text" id="namebox" name="name"><br>
+                    <label class="newsletter-entry" for="emailbox">Email:</label><br>
+                    <input class="newsletter-entry" type="text" id="emailbox" name="email"><br>
+                    <button class="signup-button "type="submit">SIGN UP</button>
+                </fieldset>
+            </form>
+        </div>
     </main>
     <footer>
         <p>©2025 Rapids Whitewater Rafting | Tyler Matthew Peterson</p>
@@ -58,8 +73,6 @@
                 <img src="images/tiktok.svg" alt="Tiktok" width="28">
             </a>
         </nav>
-        <a href="REPLACE LINK HERE">Click here for the Home
-            page wireframe</a>
     </footer>
 </body>
 
